# crnch

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: checks.rs  compression.rs  logger.rs  main.rs  utils.rs
